<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scheduler"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_scheduler" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_equalizer_black_24dp"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_overlays"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/title_overlays" />

</menu>
