<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dataTitle"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/statTitle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="GENERAL STATISTICS"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dataTitle"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/cInterval"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/interval_count" />

            <TextView
                android:id="@+id/sInterval"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/shortest_interval" />

            <TextView
                android:id="@+id/lInterval"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/longest_interval" />

            <TextView
                android:id="@+id/tCount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/tasks_completed" />

            <TextView
                android:id="@+id/tPaused"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/times_paused" />

            <TextView
                android:id="@+id/aDuration"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/average_duration" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/iCVal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="5" />

            <TextView
                android:id="@+id/sIVal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="4 minutes" />

            <TextView
                android:id="@+id/lIVal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="2 hours" />

            <TextView
                android:id="@+id/tCVal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="37" />

            <TextView
                android:id="@+id/tPVal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="11" />

            <TextView
                android:id="@+id/aDVal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="47 minutes" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>